WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241562
MacOS keyboard smooth scrolling does not scroll recursively on ancestor scrollable regions
https://bugs.webkit.org/show_bug.cgi?id=241562
Summary
MacOS keyboard smooth scrolling does not scroll recursively on ancestor scrol...
Dana Estra
Reported
2022-06-13 12:07:37 PDT
MacOS keyboard smooth scrolling does not scroll recursively on parent scrollable regions
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-13 12:10:29 PDT
<
rdar://problem/95045588
>
Dana Estra
Comment 2
2022-06-13 14:25:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1480
EWS
Comment 3
2022-06-28 10:43:51 PDT
Committed
251914@main
(66e6a77ccc8e): <
https://commits.webkit.org/251914@main
> Reviewed commits have been landed. Closing PR #1480 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug