Add functionality for macOS smooth keyboard scrolling to scroll recursively on ancestor regions https://bugs.webkit.org/show_bug.cgi?id=241562 <rdar://95045588>

Reviewed by Simon Fraser.

Tests:
LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-frame.html
LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-overflow.html
LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-frame.html
LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-overflow.html

Currently, macOS smooth keyboard scrolling stops when it reaches
the edge of the region that the scroll was initiated on. This patch makes it so
that the KeyboardScrollingAnimator for the parent region is called once the animator
for the region current being scrolled is stopped.

* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-frame-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-frame.html: Added.

Tests that when an iframe has run out of room to scroll, its parent frame scrolls.

* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-overflow-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-frame-to-overflow.html: Added.

Tests that when an iframe has run out of room to scroll, its parent overflow:scroll div scrolls.

* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-frame-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-frame.html: Added.

Tests that when an overflow:scroll div has run out of room to scroll, its parent frame scrolls.

* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-overflow-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/smooth-scroll-recursive-overflow-to-overflow.html: Added.

Tests that when an overflow:scroll div has run out of room to scroll, its parent overflow:scroll div scrolls.

* Source/WebCore/Headers.cmake:

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::defaultKeyboardEventHandler):
(WebCore::EventHandler::defaultSpaceEventHandler):
(WebCore::EventHandler::DefaultArrowEventHandler):

Have these functions call KeyboardScrollRecursively instead of startKeyboardScrolling.

(WebCore::EventHandler::keyboardScrollingAnimatorForFocusedNode): Deleted.
(WebCore::EventHandler::stopKeyboardScrolling):

Retrieves from Page the KeyboardScrollingAnimator that is currently active and tells
it to stop scrolling.

(WebCore::EventHandler::startKeyboardScrolling): Deleted.
(WebCore::EventHandler::beginKeyboardScrollGesture):

Tells KeyboardScrollingAnimator to start scrolling.

(WebCore::EventHandler::startKeyboardScrollAnimationOnDocument):

Helper function for EventHandler::keyboardScrollRecursively. Handles scrolling the document.

(WebCore::EventHandler::startKeyboardScrollAnimationOnRenderBoxLayer):

Helper function for EventHandler::startKeyboardScrollAnimationOnRenderBoxAndItsAncestors.

(WebCore::EventHandler::startKeyboardScrollAnimationOnRenderBoxAndItsAncestors):

Checks that a scrollable region is an overflow:scroll region, and if so, calls
EventHandler::startKeyboardScrollAnimationOnRenderBoxLayer to scroll the region. If scrolling it fails,
Recurses on parent region.

(WebCore::EventHandler::startKeyboardScrollAnimationOnEnclosingScrollableContainer):

Helper function for EventHandler::keyboardScrollRecursively. Handles scrolling overflow:scroll
regions within current frame. First determines if an overflow:scroll region is focused, and if so,
calls RenderBox::keyboardScroll to scroll that region and any of its ancestor overflow:scroll
regions within the frame.

(WebCore::EventHandler::keyboardScrollRecursively):

If an overflow:scroll region within the frame is focused, attempts to scroll it followed
by any containing overflow:scroll regions. Otherwise attempts to scroll the frame. If
that also returns false, recurses on the parent frame.

* Source/WebCore/page/EventHandler.h:

* Source/WebCore/page/Page.h:
(WebCore::Page::setCurrentKeyboardScrollingAnimator):
(WebCore::Page::currentKeyboardScrollingAnimator const):

Page now keeps a pointer to the KeyboardScrollingAnimator currently in use so that it
can be stopped when a keyup event occurs.

* Source/WebCore/platform/KeyboardScrollingAnimator.cpp:
(WebCore::KeyboardScrollingAnimator::beginKeyboardScrollGesture):

Now stops the animation and returns false if cannot scroll further in the direction given
by the event. Also now returns true if m_scrollTriggeringKeyIsPressed is true (indicating
a scroll is already in action) rather than returning false as before. This is needed because
when beginKeyboardScrollGesture returns false, the function that called it will try to
scroll on the parent region.

* Source/WebCore/platform/KeyboardScrollingAnimator.h:

Canonical link: https://commits.webkit.org/251914@main