Source/WebCore/page/EventHandler.cpp
@@ -3887,7 +3887,7 @@ void EventHandler::defaultKeyboardEventHandler(KeyboardEvent& event)
         else if (event.keyIdentifier() == "U+0008"_s)
             defaultBackspaceEventHandler(event);
         else if (event.keyIdentifier() == "PageUp"_s || event.keyIdentifier() == "PageDown"_s) {
-            if (startKeyboardScrolling(event))
+            if (keyboardScrollRecursively(event, nullptr))
                 event.setDefaultHandled();
         } else {
             FocusDirection direction = focusDirectionForKey(event.keyIdentifier());
@@ -4303,7 +4303,7 @@ void EventHandler::defaultSpaceEventHandler(KeyboardEvent& event)
     if (!view)
         return;
 
-    bool defaultHandled = m_frame.settings().eventHandlerDrivenSmoothKeyboardScrollingEnabled() ? startKeyboardScrolling(event) : view->logicalScroll(direction, ScrollGranularity::Page);
+    bool defaultHandled = m_frame.settings().eventHandlerDrivenSmoothKeyboardScrollingEnabled() ? keyboardScrollRecursively(event, nullptr) : view->logicalScroll(direction, ScrollGranularity::Page);
     if (defaultHandled)
         event.setDefaultHandled();
 }
@@ -4336,41 +4336,96 @@ void EventHandler::defaultBackspaceEventHandler(KeyboardEvent& event)
         event.setDefaultHandled();
 }
 
-KeyboardScrollingAnimator* EventHandler::keyboardScrollingAnimatorForFocusedNode()
-{
-    Node* node = m_frame.document()->focusedElement();
-
-    if (!node)
-        node = m_mousePressNode.get();
-
-    auto* scrollableArea = enclosingScrollableArea(node);
-    if (!scrollableArea)
-        return nullptr;
-
-    return scrollableArea->scrollAnimator().keyboardScrollingAnimator();
-}
-
 void EventHandler::stopKeyboardScrolling()
 {
-    auto* animator = keyboardScrollingAnimatorForFocusedNode();
+    auto animator = m_frame.page()->currentKeyboardScrollingAnimator();
     if (animator)
         animator->handleKeyUpEvent();
 }
 
-bool EventHandler::startKeyboardScrolling(KeyboardEvent& event)
+bool EventHandler::beginKeyboardScrollGesture(KeyboardScrollingAnimator* animator, KeyboardEvent& event)
+{
+    auto* platformEvent = event.underlyingPlatformEvent();
+
+    if (animator && platformEvent && animator->beginKeyboardScrollGesture(*platformEvent)) {
+        m_frame.page()->setCurrentKeyboardScrollingAnimator(animator);
+        return true;
+    }
+
+    return false;
+}
+
+bool EventHandler::startKeyboardScrollAnimationOnDocument(KeyboardEvent& event)
+{
+    auto view = m_frame.view();
+    if (!view)
+        return false;
+
+    auto* animator = view->scrollAnimator().keyboardScrollingAnimator();
+    return beginKeyboardScrollGesture(animator, event);
+}
+
+bool EventHandler::startKeyboardScrollAnimationOnRenderBoxLayer(KeyboardEvent& event, RenderBox* renderBox)
+{
+    auto* scrollableArea = renderBox->layer() ? renderBox->layer()->scrollableArea() : nullptr;
+    if (!scrollableArea)
+        return false;
+
+    auto* animator = scrollableArea->scrollAnimator().keyboardScrollingAnimator();
+    return beginKeyboardScrollGesture(animator, event);
+}
+
+bool EventHandler::startKeyboardScrollAnimationOnRenderBoxAndItsAncestors(KeyboardEvent& event, RenderBox* renderBox)
+{
+    while (renderBox && !renderBox->isRenderView()) {
+        if (startKeyboardScrollAnimationOnRenderBoxLayer(event, renderBox))
+            return true;
+        renderBox = renderBox->containingBlock();
+    }
+
+    return false;
+}
+
+bool EventHandler::startKeyboardScrollAnimationOnEnclosingScrollableContainer(KeyboardEvent& event, Node* startingNode)
+{
+    RefPtr node = startingNode;
+
+    if (!node)
+        node = m_frame.document()->focusedElement();
+
+    if (!node)
+        node = m_mousePressNode.get();
+
+    if (node) {
+        auto renderer = node->renderer();
+        RenderBox& renderBox = renderer->enclosingBox();
+        if (renderer && !renderer->isListBox() && startKeyboardScrollAnimationOnRenderBoxAndItsAncestors(event, &renderBox))
+            return true;
+    }
+    return false;
+}
+
+bool EventHandler::keyboardScrollRecursively(KeyboardEvent& event, Node* startingNode)
 {
     Ref protectedFrame = m_frame;
 
     if (!m_frame.settings().eventHandlerDrivenSmoothKeyboardScrollingEnabled())
         return false;
 
-    auto* animator = keyboardScrollingAnimatorForFocusedNode();
-    auto* platformEvent = event.underlyingPlatformEvent();
+    m_frame.document()->updateLayoutIgnorePendingStylesheets();
 
-    if (animator && platformEvent)
-        return animator->beginKeyboardScrollGesture(*platformEvent);
+    if (startKeyboardScrollAnimationOnEnclosingScrollableContainer(event, startingNode))
+        return true;
 
-    return false;
+    if (startKeyboardScrollAnimationOnDocument(event))
+        return true;
+
+    RefPtr frame = &m_frame;
+    frame = frame->tree().parent();
+    if (!frame)
+        return false;
+
+    return frame->eventHandler().keyboardScrollRecursively(event, m_frame.ownerElement());
 }
 
 void EventHandler::defaultArrowEventHandler(FocusDirection focusDirection, KeyboardEvent& event)
@@ -4378,7 +4433,7 @@ void EventHandler::defaultArrowEventHandler(FocusDirection focusDirection, Keybo
     ASSERT(event.type() == eventNames().keydownEvent);
 
     if (!isSpatialNavigationEnabled(&m_frame)) {
-        if (startKeyboardScrolling(event))
+        if (keyboardScrollRecursively(event, nullptr))
             event.setDefaultHandled();
         return;
     }
